# three-eyed-raven

./: main.py  pyproject.toml  test.ipynb
data/: KOKX20260127_102227_V06  bases.csv
routes/: corvid_shadow.py  home.py  infrasound_flush.py  magnetic_static.py
temp_data/: KOKX20260131_105606_V06_MDM
utils/: raven_logic.py
