[project]
name = "three-eyed-raven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arm-pyart>=2.2.0",
    "folium>=0.20.0",
    "nexradaws>=2.0.0",
    "obspy>=1.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "streamlit>=1.53.1",
    "streamlit-folium>=0.26.1",
]
